--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2460,6 +2460,7 @@ a.button-block {
 	 .searchbar input[type="text"] {
 	      width: 90%;
 	}
+}
 
 ::placeholder {
     color: var(--c-text-muted);
