feed "status" to "Development-Level: "

--- a/_includes/Content.html
+++ b/_includes/Content.html
@@ -9,7 +9,7 @@
     {%- if page.status != nil and page.status != empty -%}
     <!-- Status -->
     <div class="article-meta__item">
-        <dt class="article-meta__item-label">Status</dt>
+        <dt class="article-meta__item-label">Development-Level: </dt>
         <dd class=".article-meta__item-value">{{page.status | capitalize}}</dd>
     </div>
     {%- endif -%}
