--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -842,7 +842,7 @@ main {
 	font-variant-numeric: oldstyle-nums;
 	font-feature-settings: pnum;
 	font-family: var(--font-family-serif);
-	font-weight: 400;
+	font-weight: bold;
 	line-height: 1;
 	margin: 80px 0 8px;
 	color: var(--c-text-strong);
