--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -16,10 +16,18 @@ layout: Stylesheet
 
 @font-face {
   font-family: 'Case';
-  src: url('../fonts/casetextreg.woff2') format('woff2');
+  src: url('../fonts/case.woff2') format('woff2');
   display: swap;
   font-weight: 400;
   font-style: normal;
+}
+
+@font-face {
+  font-family: 'Case';
+  src: url('../fonts/casetextreg.woff2') format('woff2');
+  display: swap;
+  font-weight: 400;
+  font-style: italic;
 }
 
 @font-face {
