--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -763,11 +763,11 @@ html[data-theme="dark"] {
   --line-height-snug: 1.375;
 
   /* Font family */
-  --font-family-serif: "Ogg", Iowan Old Style, Apple Garamond, Baskerville,
+  --font-family-serif: "Nikolai", Iowan Old Style, Apple Garamond, Baskerville,
     Times New Roman, Droid Serif, Times, Source Serif Pro, serif,
     Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-  --font-family-mono: "Dia", 'SFMono-Regular', 'Menlo', monospace;
-  --font-family-sans: "OggText", -apple-system, BlinkMacSystemFont,
+  --font-family-mono: "Case", 'SFMono-Regular', 'Menlo', monospace;
+  --font-family-sans: "Case", -apple-system, BlinkMacSystemFont,
     avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto,
     noto, arial, sans-serif;
 
@@ -931,7 +931,7 @@ main {
 
  h2 {
 	font-size: 28px;
-	font-weight: 400;
+	font-weight: 700;
 	letter-spacing: 0.01em;
 	line-height: 1.2;
 	margin-top: 24px;
@@ -988,7 +988,7 @@ main {
 
  h3 {
 	font-size: 21px;
-	font-weight: 400;
+	font-weight: 700;
 	letter-spacing: -0.01em;
 	line-height: 1.2;
 	margin: 36px 0 5px;
