--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -879,7 +879,7 @@ main {
 	color: var(--c-text-strong);
   	/* border-bottom: 1px solid var(--c-border) !important;*/
   	/*padding-bottom: 1.3rem;*/
-	letter-spacing: 0.01em;
+	letter-spacing: var(--letter-spacing-tight);
  	font-variant-ligatures: discretionary-ligatures;
 	
 }
@@ -932,7 +932,7 @@ main {
  h2 {
 	font-size: 28px;
 	font-weight: 700;
-	letter-spacing: 0.01em;
+	letter-spacing: var(--letter-spacing-tight);
 	line-height: 1.2;
 	margin-top: 24px;
 	padding: 24px 0 5px;
