--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -874,7 +874,7 @@ main {
 	font-feature-settings: pnum;
 	font-family: var(--font-family-serif);
 	font-weight: bold;
-	line-height: 1;
+	line-height: var(--line-height-tight);
 	margin: 80px 0 8px;
 	color: var(--c-text-strong);
   	/* border-bottom: 1px solid var(--c-border) !important;*/
