--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -794,7 +794,7 @@ html[data-theme="dark"] {
   --font-family-sans: "Suisse-Serif", -apple-system, BlinkMacSystemFont,
     avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto,
     noto, arial, sans-serif;
-    --primary-font-family: "Respira";
+    --header: "Respira";
 
   --font-family-base: var(--font-family-serif);
 
@@ -1783,7 +1783,7 @@ summary {
 
 .site-heading-ltr > .main-page-heading {
     color: var(--primary-text-color);
-    font-family:  var(--primary-font-family);
+    font-family:  var(--header) !important;
     font-weight: 600;
     margin-left: 20px;
     /*margin-bottom: 2rem;*/
