--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1813,7 +1813,7 @@ border-bottom: 1px solid var(--c-card-border);
 .site-heading-ltr a {
     text-decoration: none;
     font-weight: 500;
-    font-size: 70px;
+    font-size: 50px;
     font-family: var(--header);
     box-shadow: none;
     line-height: .9;
@@ -1823,13 +1823,13 @@ border-bottom: 1px solid var(--c-card-border);
 
 @media(min-width: 300px)and (max-width: 1069px) {
 	 .site-heading-ltr a {
-	font-size: calc(70px + (160 - 70) * ( 100vw - 300px) / (1070 - 300));
+	font-size: calc(50px + (70 - 50) * ( 100vw - 300px) / (1070 - 300));
 	}
 }
 
 @media(min-width: 1070px) {
 	 .site-heading-ltr a {
-		font-size: 160px
+		font-size: 70px
 	}
 }
 
@@ -1942,13 +1942,14 @@ border-bottom: 1px solid var(--c-card-border);
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    /*justify-content: space-evenly;*/
     width: 100%;
-    float: left;
+    /*float: left;*/
     /*border-top: 1px solid var(--c-border); 
     border-bottom: 1px solid var(--c-border); */
     padding: -1px 0; 
     margin: 0px 0px 4px 0px;
+    place-content: center;
 }
 
 .menu-right {
