--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2093,7 +2093,7 @@ border-bottom: 1px solid var(--c-card-border);
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: transparent;
+    background-color: var(--c-card-bg-light);
     cursor: pointer;
     z-index: 75;
     transition: transform .5s ease 0s,visibility 0s linear .5s;
@@ -2106,6 +2106,8 @@ border-bottom: 1px solid var(--c-card-border);
     color: var(--c-text-muted);
     margin-bottom: 0;
     text-transform: uppercase;
+    padding: 7px;
+    border-radius: 2px;
 }
 
 #theme-toggle-img {
@@ -2504,18 +2506,19 @@ a.button-block {
         margin-left: 20px;
     padding-left: 18px;
     box-sizing: border-box;
-    width: 95%;
+    width: 100%;
     height: 40px;
     border: 1px solid transparent;
     font-family: var(--font-family-sans) !important;
     color: var(--c-text);
     font-size: var(--font-size-small);
     background-color: var(--c-card-bg-light);
+	text-align: center;
 }
 
 @media(max-width: 500px) {
 	 .searchbar input[type="text"] {
-	      width: 90%;
+	      width: 100%;
 	}
 }
 
