--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -432,6 +432,13 @@ layout: Stylesheet
   font-style: normal;
 }
 
+@font-face {
+   font-family: 'pitch sans';
+   src: url('../fonts/PitchSansWeb-MediumItalic.woff2') format('woff2');
+   font-weight: 500;
+   font-style: italic;
+   font-display: swap;
+}
 
 @font-face {
    font-family: 'pitch sans';
