--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -1818,24 +1818,24 @@ border-bottom: 1px solid var(--c-card-border);
 .site-heading-ltr a {
     text-decoration: none;
     font-weight: 500;
-    font-size: 47px;
+    font-size: 20px;
     font-family: var(--header);
     box-shadow: none;
     line-height: .9;
     color: var(--c-accent);
     letter-spacing: var(--letter-spacing-tight);
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
 }
 
 @media(min-width: 300px)and (max-width: 1069px) {
 	 .site-heading-ltr a {
-	font-size: calc(47px + (70 - 47) * ( 100vw - 300px) / (1070 - 300));
+	font-size: calc(20px + (30 - 20) * ( 100vw - 300px) / (1070 - 300));
 	}
 }
 
 @media(min-width: 1070px) {
 	 .site-heading-ltr a {
-		font-size: 70px
+		font-size: 30px
 	}
 }
 
@@ -1997,7 +1997,7 @@ border-bottom: 1px solid var(--c-card-border);
     font-family: var(--font-family-mono);
     color: var(--c-text-muted);
     margin-bottom: 0;
-    text-transform: uppercase;
+    text-transform: lowercase;
 }
 
 .menu-item-text:hover {
@@ -2111,9 +2111,10 @@ border-bottom: 1px solid var(--c-card-border);
     font-family: var(--font-family-serif);
     color: var(--c-text);
     margin-bottom: 0;
-    text-transform: uppercase;
+    text-transform: lowercase;
     padding: 7px 10px;
     border-radius: 2000px;
+    font-style: italic;
 }
 
 #theme-toggle-img {
@@ -2520,6 +2521,7 @@ a.button-block {
     font-size: var(--font-size-small);
     background-color: transparent;
     text-align: center;
+    font-style: italic;
 }
 
 @media(max-width: 500px) {
@@ -2803,7 +2805,7 @@ a.button-block {
     margin-left: 20px;
     margin-right: 50px;
     font-family:  var(--font-family-serif);
-    font-weight: 400;
+    font-weight: 500;
     letter-spacing: var(--letter-spacing-tight);
     font-size: 20px;
     line-height: 1;
