some spacing, arrow change,

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -464,6 +464,13 @@ layout: Stylesheet
    font-display: swap;
 }
 
+@font-face {
+   font-family: 'pitch arrow';
+   src: url('../fonts/order_link_arrow.woff') format('woff');
+   font-style: normal;
+   font-display: swap;
+}
+
 
 @font-face {
    font-family: 'untitled';
@@ -955,7 +962,7 @@ main {
 
 @media(min-width: 768px) {
 	 h1 {
-		margin: 120px 0 12px
+		margin: 120px 0 20px
 	}
 }
 
@@ -1954,7 +1961,7 @@ border-bottom: 1px solid var(--c-card-border);
     /*border-top: 1px solid var(--c-border); 
     border-bottom: 1px solid var(--c-border); */
     padding: -1px 0; 
-    margin: 0px 0px 4px 0px;
+    margin: 14px 0px 4px 0px;
     place-content: center;
 }
 
@@ -3034,7 +3041,7 @@ position: absolute;
 
 .content a::after {
 	content:'→';
-	font-family: var(--font-family-sans) !important;
+	font-family: "pitch arrow" !important;
 }
 
 .sn-right,
