--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -799,14 +799,10 @@ html[data-theme="dark"] {
   --line-height-snug: 1.375;
 
   /* Font family */
-  --font-family-serif: "Pitch Sans", Iowan Old Style, Apple Garamond, Baskerville,
-    Times New Roman, Droid Serif, Times, Source Serif Pro, serif,
-    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
-  --font-family-mono: "Pitch Sans", 'SFMono-Regular', 'Menlo', monospace;
-  --font-family-sans: "Pitch Sans", -apple-system, BlinkMacSystemFont,
-    avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto,
-    noto, arial, sans-serif;
-    --header: "Pitch Sans";
+  --font-family-serif: "untitled", -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif;  
+    --font-family-mono: "Pitch Sans", 'SFMono-Regular', 'Menlo', monospace;
+    --font-family-sans: "Copernicus", Iowan Old Style, Apple Garamond, Baskerville, Times New Roman, Droid Serif, Times, Source Serif Pro, serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    --header: "untitled", -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Ubuntu, roboto, noto, arial, sans-serif; 
 
   --font-family-base: var(--font-family-serif);
 
