--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2515,6 +2515,9 @@ a.button-block {
     width: 100%;
     height: 40px;
     border-bottom: 1px solid var(--c-border);
+    border-top: transparent;
+	border-right: transparent;
+	border-left: transparent;
     font-family: var(--font-family-base) !important;
     color: var(--c-text);
     font-size: var(--font-size-small);
