--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2789,6 +2789,11 @@ a.button-block {
 
 .feed-title-excerpt-block:hover {
     background-color: var(--c-text-strong);
+    transition: color .2s;
+    transition-property: color;
+    transition-duration: 0.2s;
+    transition-timing-function: ease;
+    transition-delay: 0s;
 }
 
 .srccode {
