padding top to excerpt blocks

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2782,6 +2782,7 @@ a.button-block {
     width: 100%;
     cursor: pointer;
     padding-bottom: 1rem;
+	padding-top: 1rem;
     color: var(--c-text-strong);
     /*border-top: clamp(1rem, 0.4286rem + 1.0204vw, 1.5rem) solid var(--c-card-text-muted);*/
 }
