feed title color change on hover

--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2824,6 +2824,10 @@ a.button-block {
     }
 }
 
+.feed-title:hover {
+	color: inherit;
+}
+
 .feed-excerpt{
     color: var(--c-border) !important;
     margin-top: -20px;
