--- a/_includes/Feed.html
+++ b/_includes/Feed.html
@@ -34,7 +34,7 @@
 {%- if page.permalink == "/" -%}
     {%- for item in site.posts -%}
         <div class="feed-title-excerpt-block disable-select" data-url="{{site.url}}{{item.url}}">
-            <a href="{{item.url}}" style="text-decoration: none; color: #555555;">
+            <a href="{{item.url}}" style="text-decoration: none;">
             {%- if item.status == "Ongoing" or item.status == "ongoing" -%}
             <ul style="padding-left: 20px; margin-top: 20px;" class="tags">
             <li style="padding: 5px 5px; border-radius: 10px;" class="status"><b>Status  </b>&nbsp{{item.status | capitalize }}</li>
