--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -3061,6 +3061,10 @@ position: absolute;
     text-decoration: none;
     /*background-image: linear-gradient(0deg,var(--lime) 40%,transparent 0);*/
     font-weight: var(--font-weight-semibold);
+    box-shadow: inset 0 -1px var(--c-border);
+    color: var(--c-text-link);
+    cursor: pointer;
+    transition: box-shadow 0.2s cubic-bezier(0.645, 0.045, 0.355, 1),color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 .content a:hover {
