--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2866,9 +2866,9 @@ a.button-block {
 }
 
 .feed-title-excerpt-block:hover {
-    background-color: var(--c-text-strong);
+    /*background-color: var(--c-text-strong);*/
     transition: color .2s;
-    color: var(--c-bg);
+    color: var(--c-accent);
 }
 
 .srccode {
