changing site display title

--- a/_includes/Header.html
+++ b/_includes/Header.html
@@ -61,7 +61,7 @@
         {%- endif -%}
         
         <div class="{{header_direction}} profile-board-col">
-            <p class="main-page-heading {{main_heading_size}} {{main_heading_margin}}"><a href='/'>{{site.heading}}</a></p>
+            <p class="main-page-heading {{main_heading_size}} {{main_heading_margin}}"><a href='/'>Link</a><a style="font-family: 'Koor'; font-weight: 500;" href='/'>Bible</a></p>
             {%- if site.tagline.enabled -%}
             {%- if site.subheading.enabled -%}
             <h4 class="main-page-subheading medium"><a href="/">{{site.subheading.name}}</a></h4>
