--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -2044,7 +2044,7 @@ border-bottom: 1px solid var(--c-card-border);*/
 }
 
 .menu-item:nth-of-type(1) {
-    padding-left: 10px !important;
+    /*padding-left: 10px !important;*/
 }
 
 .menu-item {
@@ -3011,20 +3011,21 @@ position: absolute;
 }
 
 .status {
-    color: var(--c-card);
-    text-decoration: none;
+        color: var(--c-text-muted);
+    /* text-decoration: none; */
     display: inline-block;
-    padding: 0px 10px !important;
+    /* padding: 0px 10px !important; */
     height: auto;
     vertical-align: middle;
-    font-family: var(--font-family-sans);
+    font-family: var(--font-family-serif);
     font-weight: normal !important;
     font-size: var(--font-size-small);
     margin-bottom: 0;
     line-height: 1.5rem !important;
-    text-transform: uppercase;
-    background-color: var(--c-topper-split-bg);
-	border-radius: 0 !important;
+    /* text-transform: uppercase; */
+    /* background-color: var(--c-topper-split-bg); */
+    border-radius: 0 !important;
+    /* border-bottom: 2px solid var(--c-card-border);
 }
 
 .status {
