--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -3025,7 +3025,7 @@ position: absolute;
     /* text-transform: uppercase; */
     /* background-color: var(--c-topper-split-bg); */
     border-radius: 0 !important;
-    /* border-bottom: 2px solid var(--c-card-border);
+    /* border-bottom: 2px solid var(--c-card-border);*/
 }
 
 .status {
