--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -731,20 +731,20 @@ layout: Stylesheet
 /*light/dark mode colors*/
 
 html, html[data-theme="light"] {
-	--c-bg: #f0f0f0;
-    --c-accent: #e6ffa0;
-    --c-text: #3c3830;
-    --c-text-muted: #555555;
-    --c-text-strong: #1c1c1c;
+	--c-bg: #fffbed;
+    --c-accent: #00545e;
+    --c-text: #00545e;
+    --c-text-muted: rgba(0,84,94,.5);
+    --c-text-strong: #fec27c;
     --c-text-link: #6b501a;
     --c-border: rgba(128, 116, 107, 0.3);
     --c-border-light: rgba(128, 116, 107, 0.1);
     --c-btn-bg: #e0d5c0;
     --c-btn-alt-bg: #f5f3ef;
-    --c-card-bg: #e0d5c0;
+    --c-card-bg: #e0efe1;
     --c-card-bg-light: rgba(224, 213, 192, 0.4);
-    --c-card-border: #8e7546;
-    --c-card-border-light: #bea77c;
+    --c-card-border: rgba(28,28,28,0.25);
+    --c-card-border-light: rgba(28,28,28,0.25);
     --c-card-text: #1c1c1c;
     --c-card-text-muted: #2d2825;
     --c-card-text-link: #1c1c1c;
@@ -807,20 +807,20 @@ html[data-theme="dark"] {
 	}
 
 	html[data-theme="light"] {
-	--c-bg: #f0f0f0;
-    --c-accent: #e6ffa0;
-    --c-text: #3c3830;
-    --c-text-muted: #555555;
-    --c-text-strong: #1c1c1c;
+--c-bg: #fffbed;
+    --c-accent: #00545e;
+    --c-text: #00545e;
+    --c-text-muted: rgba(0,84,94,.5);
+    --c-text-strong: #fec27c;
     --c-text-link: #6b501a;
     --c-border: rgba(128, 116, 107, 0.3);
     --c-border-light: rgba(128, 116, 107, 0.1);
     --c-btn-bg: #e0d5c0;
     --c-btn-alt-bg: #f5f3ef;
-    --c-card-bg: #e0d5c0;
+    --c-card-bg: #e0efe1;
     --c-card-bg-light: rgba(224, 213, 192, 0.4);
-    --c-card-border: #8e7546;
-    --c-card-border-light: #bea77c;
+    --c-card-border: rgba(28,28,28,0.25);
+    --c-card-border-light: rgba(28,28,28,0.25);
     --c-card-text: #1c1c1c;
     --c-card-text-muted: #2d2825;
     --c-card-text-link: #1c1c1c;
@@ -829,7 +829,6 @@ html[data-theme="dark"] {
     --c-topper-split-bg: #e0d5c0;
     --c-gradient-fade: linear-gradient(90deg, rgba(245, 243, 239, 0) 0%, rgba(245, 243, 239, 0.75) 50%, #f5f3ef 100%);
     --c-gradient-fade-vert: linear-gradient(180deg, rgba(245, 243, 239, 0) 0%, rgba(245, 243, 239, 0.75) 50%, #f5f3ef 100%);
-	}
 }
 
 /* end of experiment*/
