--- a/assets/css/Style.css
+++ b/assets/css/Style.css
@@ -830,6 +830,7 @@ html[data-theme="dark"] {
     --c-gradient-fade: linear-gradient(90deg, rgba(245, 243, 239, 0) 0%, rgba(245, 243, 239, 0.75) 50%, #f5f3ef 100%);
     --c-gradient-fade-vert: linear-gradient(180deg, rgba(245, 243, 239, 0) 0%, rgba(245, 243, 239, 0.75) 50%, #f5f3ef 100%);
 }
+}
 
 /* end of experiment*/
 
